# robot_sbc

./: .env  Cargo.toml
src/: action_executor.rs  console.rs  control.rs  dashboard.rs  debug.rs  devices.rs  main.rs  math.rs  robot.rs  scheduler.rs
src/control/: actions.rs  claw_servo.rs  kinematic.rs  landmark.rs  motion.rs  odometry.rs  routines.rs  sequences.rs  states.rs  yaw_servo.rs
src/control/actions/: calibrate.rs  calibrate_placement.rs  calibrate_source.rs  extend_arm.rs  general.rs  lift_arm.rs  move.rs  navigate.rs  rotate_arm.rs  rotate_claw.rs
src/control/routines/: calibration.rs  main.rs  material_handling.rs  navigation.rs  placement.rs  test.rs  utils.rs
src/control/sequences/: calibration.rs  main.rs  navigation.rs  placement.rs  utils.rs
src/control/states/: claw_servo.rs  odometry.rs
src/dashboard/: app.rs  helpers.rs  layout.rs  widgets.rs
src/dashboard/widgets/: compass.rs  controller.rs  gyro.rs  maixcam.rs  map.rs  odometry.rs  qr.rs  stm32.rs  system.rs
src/debug/: app.rs  display.rs  helpers.rs  layout.rs  widgets.rs
src/debug/widgets/: compass.rs  controller.rs  gyro.rs  maixcam.rs  map.rs  mod.rs  motion.rs  odometry.rs  qr.rs  stm32.rs  system.rs
src/devices/: gyro.rs  maixcam.rs  qr.rs  stm32.rs  utils.rs
src/devices/gyro/: driver.rs  sample.rs  state.rs
src/devices/maixcam/: circle.rs  color.rs  driver.rs  message.rs  sample.rs  state.rs
src/devices/qr/: driver.rs  linux.rs  state.rs  stub.rs
src/devices/stm32/: command.rs  commands.rs  controller.rs  (+3 more)
src/math/: mecanum.rs  pid.rs  pose.rs  twist.rs  utils.rs
(+3 files in other folders)
