[package]
name = "robot-sbc"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.9.1"
dotenv = "0.15.0"
glam = "0.32.1"
once_cell = "1.21.4"
serialport = "4.9.0"
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.33"
rand = "0.10.1"
serde_json = "1.0.149"
serde = { version = "1", features = ["derive"] }
rqrr = "0.10.1"
image = "0.25.9"

[target.'cfg(target_os = "linux")'.dependencies]
rscam = "0.5.5"
